Se corrigio la ruta del style.css en el index y se agregaron diferentes tipos de variables

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Práctica e Introduccion al lenguaje de programación JavaScript">
     <meta name="keywords" content="JavaScript, JS, Programación, Práctica, Ejercicios">
     <meta name="author" content="César Luciano Angeleri">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Practica de JavaScript</title>
 </head>
 <body>
