Resuelto el ejercicio de la votacion

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Practica de JavaScript</title>
 </head>
 <body>
-    <script src="./js/1-variables.js"></script>
-    <!-- <script src="./js/2-condicionales.js"></script> -->
+    <script src="./js/2-condicionales.js"></script>
 </body>
 </html>
