--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <title>Practica de JavaScript</title>
 </head>
 <body>
-    <script src="./js/2-condicionales.js"></script>
+    <script src="./js/3-switch.js"></script>
 </body>
 </html>
