Se agregó la resolucion del ejercicio 9 del TP1 con solo Ifs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <title>Practica de JavaScript</title>
 </head>
 <body>
-    <script src="./js/3-switch.js"></script>
+    <script src="./js/ejercicio9_TP1.js"></script>
 </body>
 </html>
