Se agrego los ejemplos de bucles While y Do While

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <title>Practica de JavaScript</title>
 </head>
 <body>
-    <script src="./js/ejercicio11_TP1.js"></script>
+    <script src="./js/4-bucles.js"></script>
 </body>
 </html>
