Se agregaron conceptos iniciales de arrays

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <title>Practica de JavaScript</title>
 </head>
 <body>
-    <script src="./js/ejercicio17_TP2.js"></script>
+    <script src="./js/4-arrays.js"></script>
 </body>
 </html>
