Agregamos un ejemplo de creacion de objetos y metodos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <title>Practica de JavaScript</title>
 </head>
 <body>
-    <script src="./js/6-arrays_y_funciones.js"></script>
+    <script src="./js/8-objetos.js"></script>
 </body>
 </html>
