Se agregaron nuevos conceptos de POO

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <title>Practica de JavaScript</title>
 </head>
 <body>
-    <script src="./js/8-objetos.js"></script>
+    <script src="./js/9-PrototiposClases.js"></script>
 </body>
 </html>
